[gd_scene load_steps=13 format=4 uid="uid://xbghkqpax8p1"]

[ext_resource type="Script" uid="uid://b44di084p1vtu" path="res://Game/Levels/level_01.gd" id="1_fml3e"]
[ext_resource type="Texture2D" uid="uid://14y7e4i1ptev" path="res://Assets/Backgrounds/bg2.png" id="1_gipxu"]
[ext_resource type="PackedScene" uid="uid://6eu0grrpwlum" path="res://Game/Player/Player.tscn" id="3_q5qvi"]
[ext_resource type="PackedScene" uid="uid://cvj7ujrwglj3l" path="res://Game/Tilesets/dirt.tscn" id="4_3yd84"]
[ext_resource type="PackedScene" uid="uid://u8ojwn3lfsvu" path="res://Game/Tilesets/items.tscn" id="4_g0m1e"]
[ext_resource type="PackedScene" uid="uid://cvtuwtmx4lymo" path="res://Game/Tilesets/bricks.tscn" id="4_mfvs1"]
[ext_resource type="PackedScene" uid="uid://nqx4hwyywk3k" path="res://Game/Enemies/Traps/spikes.tscn" id="5_g0m1e"]
[ext_resource type="PackedScene" uid="uid://dfvf2kexit7p5" path="res://Game/GUI/GUI.tscn" id="5_kbg8p"]
[ext_resource type="PackedScene" uid="uid://cyn58pkrgamah" path="res://Game/Enemies/slime.tscn" id="8_by2qa"]
[ext_resource type="PackedScene" uid="uid://dkgwgre844wtr" path="res://Game/Enemies/Traps/animated_spike.tscn" id="8_hq8bp"]
[ext_resource type="PackedScene" uid="uid://cg0kbdpdg2y38" path="res://Game/Enemies/bat.tscn" id="9_s0t6t"]
[ext_resource type="PackedScene" uid="uid://5d5o7khc35yt" path="res://Game/World/KillZone.tscn" id="10_sdhud"]

[node name="Level01" type="Node2D"]
script = ExtResource("1_fml3e")

[node name="Sky" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("1_gipxu")
metadata/_edit_lock_ = true

[node name="Gui" parent="." instance=ExtResource("5_kbg8p")]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.662971, 0.678271, 0.933813, 0.368627)
blend_mode = 1
metadata/_edit_lock_ = true

[node name="Tilemaps" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Walls" parent="Tilemaps" instance=ExtResource("4_mfvs1")]
tile_map_data = PackedByteArray("AAAaAAYAAQACAAAAAAAaAAUAAQAAAAAAAAAZAAYAAQABAAAAAAAZAAUAAQAEAAAAAAAYAAYAAQAAAAAAAAAYAAUAAQADAAAAAAAXAAYAAQAEAAAAAAAXAAUAAQACAAAAAAAWAAYAAQADAAAAAAAWAAUAAQABAAAAAAAVAAYAAQACAAAAAAAVAAUAAQAAAAAAAAAUAAYAAQABAAAAAAAUAAUAAQAEAAAAAAATAAYAAQAAAAAAAAATAAUAAQADAAAAAAASAAYAAQAEAAAAAAASAAUAAQACAAAAAAAYAAgAAQABAAEAAAAYAAcAAQAAAAAAAAAXAAgAAQAAAAEAAAAXAAcAAQAEAAAAAAAbAAEAAAALAAAAAAAaAAEAAAAKAAAAAAAZAAEAAAAKAAAAAAAYAAEAAAAKAAAAAAAXAAEAAAAKAAAAAAAWAAEAAAAIAAAAAAAbAAIAAAALAAMAAAAaAAIAAAAJAAMAAAAZAAIAAAAJAAMAAAAYAAIAAAAJAAMAAAAXAAIAAAAJAAMAAAAWAAIAAAAIAAMAAAAeAAIAAAADAAMAAAAdAAIAAAABAAMAAAAlAAIAAAALAAMAAAAlAAEAAAALAAAAAAAkAAIAAAAJAAMAAAAkAAEAAAAKAAAAAAAjAAIAAAAJAAMAAAAjAAEAAAAKAAAAAAAiAAIAAAAJAAMAAAAiAAEAAAAKAAAAAAAhAAIAAAAJAAMAAAAhAAEAAAAKAAAAAAAgAAIAAAAIAAMAAAAgAAEAAAAIAAAAAAAgAAsAAQABAAAAAAAgAAoAAQABAAAAAAAfAAsAAQAAAAAAAAAfAAoAAQAAAAAAAAAeAAsAAQAEAAAAAAAeAAoAAQAEAAAAAAAdAAsAAQADAAAAAAAdAAoAAQADAAAAAAAcAAsAAQACAAAAAAAcAAoAAQACAAAAAAAbAAsAAQABAAAAAAAbAAoAAQABAAAAAAAaAAsAAQAAAAAAAAAaAAoAAQAAAAAAAAASAA8AAQACAAAAAAASAA4AAQACAAAAAAASAA0AAQACAAAAAAARAA8AAQABAAAAAAARAA4AAQABAAAAAAARAA0AAQABAAAAAAAQAA8AAQAAAAAAAAAQAA4AAQAAAAAAAAAQAA0AAQAAAAAAAAAPAA8AAQAEAAAAAAAPAA4AAQAEAAAAAAAPAA0AAQAEAAAAAAAOAA8AAQADAAAAAAAOAA4AAQADAAAAAAAOAA0AAQADAAAAAAANAA8AAQACAAAAAAANAA4AAQACAAAAAAANAA0AAQACAAAAAAAMAA8AAQABAAAAAAAMAA4AAQABAAAAAAAMAA0AAQABAAAAAAALAA8AAQAAAAAAAAALAA4AAQAAAAAAAAALAA0AAQAAAAAAAAAKAA8AAQAEAAAAAAAKAA4AAQAEAAAAAAAKAA0AAQAEAAAAAAAJAA8AAQADAAAAAAAJAA4AAQADAAAAAAAJAA0AAQADAAAAAAAIAA8AAQACAAAAAAAIAA4AAQACAAAAAAAIAA0AAQACAAAAAAAHAA8AAQABAAAAAAAHAA4AAQABAAAAAAAHAA0AAQABAAAAAAAKAAwAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAkAAQAAAAAAAAAJAAwAAQAEAAAAAAAJAAsAAQAEAAAAAAAJAAoAAQAEAAAAAAAJAAkAAQAEAAAAAAAIAAwAAQADAAAAAAAIAAsAAQADAAAAAAAIAAoAAQADAAAAAAAIAAkAAQADAAAAAAAHAAwAAQACAAAAAAAHAAsAAQACAAAAAAAHAAoAAQACAAAAAAAHAAkAAQACAAAAAAALAAkAAQAAAAAAAAASAAsAAQADAAAAAAAQAAsAAQABAAAAAAAPAAsAAQAAAAAAAAAOAAsAAQAEAAAAAAAOAAkAAQADAAAAAAANAAkAAQACAAAAAAAYAA0AAQADAAAAAAAYAAwAAQADAAAAAAAXAA0AAQACAAAAAAAXAAwAAQACAAAAAAAWAA0AAQABAAAAAAAWAAwAAQABAAAAAAAVAA0AAQAAAAAAAAAVAAwAAQAAAAAAAAAUAA0AAQAEAAAAAAAUAAwAAQAEAAAAAAAYABIAAQACAAAAAAAYABEAAQACAAAAAAAYABAAAQADAAAAAAAYAA8AAQADAAAAAAAYAA4AAQADAAAAAAAXABIAAQABAAAAAAAXABEAAQABAAAAAAAXABAAAQACAAAAAAAXAA8AAQACAAAAAAAXAA4AAQACAAAAAAAWABIAAQAAAAAAAAAWABEAAQAAAAAAAAAWABAAAQABAAAAAAAWAA8AAQABAAAAAAAWAA4AAQABAAAAAAAXABQAAQACAAAAAAAXABMAAQACAAAAAAAWABQAAQABAAAAAAAWABMAAQABAAAAAAAVABQAAQAAAAAAAAAVABMAAQAAAAAAAAAVABIAAQAEAAAAAAAUABQAAQAEAAAAAAAUABMAAQAEAAAAAAAUABIAAQADAAAAAAATABQAAQADAAAAAAATABMAAQADAAAAAAATABIAAQACAAAAAAASABQAAQACAAAAAAASABMAAQACAAAAAAASABIAAQABAAAAAAAfABEAAQADAAAAAAAeABEAAQACAAAAAAAdABEAAQABAAAAAAAcABEAAQAAAAAAAAAbABEAAQAAAAAAAAAaABEAAQAEAAAAAAAZABEAAQADAAAAAAAaABIAAQAEAAAAAAAZABIAAQADAAAAAAALAAwAAQAAAAAAAAANAAwAAQACAAAAAAAOAAwAAQADAAAAAAAPAAwAAQAEAAAAAAAGAAwAAQABAAAAAAAGAA0AAQAAAAAAAAALAAsAAQABAAAAAAAMAAsAAQACAAAAAAANAAsAAQADAAAAAAALAAoAAQAAAAAAAAAMAAoAAQABAAAAAAANAAoAAQACAAAAAAAOAAoAAQADAAAAAAAMAAkAAQABAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQABAAAAAAAFAAoAAQAAAAAAAAAGAAoAAQABAAAAAAAFAAsAAQAAAAAAAAAGAAsAAQABAAAAAAAFAAwAAQAAAAAAAAAPAAoAAQAEAAAAAAATAAoAAQACAAMAAAATAAsAAQAEAAIAAAAPAAkAAQAEAAAAAAAQAAkAAQABAAAAAAATAAkAAQACAAIAAAAQAAwAAQAAAAAAAAARAAwAAQABAAAAAAASAAwAAQACAAAAAAATAAwAAQAEAAIAAAATAA0AAQADAAAAAAATAA4AAQADAAAAAAAUAA4AAQAEAAAAAAATAA8AAQADAAAAAAAUAA8AAQAEAAAAAAAVAA4AAQAAAAAAAAAZAA4AAQAEAAAAAAAZAA0AAQAEAAAAAAAZAAwAAQAEAAAAAAAVAAsAAQABAAAAAAAWAAsAAQACAAAAAAAXAAsAAQADAAAAAAAYAAsAAQAEAAAAAAAZAAsAAQAEAAAAAAAUAAsAAQAAAAAAAAAUAAoAAQAEAAAAAAAVAAoAAQABAAAAAAAWAAoAAQACAAAAAAAXAAoAAQAAAAMAAAAYAAoAAQABAAMAAAAUAAkAAQAEAAEAAAAVAAkAAQABAAAAAAAWAAkAAQACAAAAAAAXAAkAAQAAAAIAAAAYAAkAAQABAAIAAAAZAAkAAQACAAIAAAAaAAkAAQAAAAAAAAAbAAkAAQABAAAAAAAZAAoAAQACAAMAAAAcAAkAAQACAAAAAAAdAAkAAQAAAAMAAAAaAAwAAQAAAAAAAAAbAAwAAQAAAAAAAAAcAAwAAQAAAAAAAAAdAAwAAQABAAAAAAAeAAwAAQACAAAAAAAaAA0AAQAAAAAAAAAbAA0AAQAAAAAAAAAcAA0AAQAAAAAAAAAdAA0AAQABAAAAAAAeAA0AAQACAAAAAAAaAA4AAQAAAAAAAAAbAA4AAQAAAAAAAAAcAA4AAQAAAAAAAAAdAA4AAQABAAAAAAAeAA4AAQACAAAAAAAZAA8AAQAEAAAAAAAaAA8AAQAAAAAAAAAbAA8AAQABAAAAAAAcAA8AAQACAAAAAAAdAA8AAQADAAAAAAAZABAAAQAEAAAAAAAaABAAAQAAAAAAAAAbABAAAQAAAAAAAAAcABAAAQAAAAAAAAAdABAAAQABAAAAAAAVAA8AAQAAAAAAAAAeAA8AAQAEAAAAAAAeABAAAQACAAAAAAAVABAAAQAAAAAAAAAQABAAAQAAAAAAAAARABAAAQABAAAAAAASABAAAQACAAAAAAATABAAAQADAAAAAAAUABAAAQAEAAAAAAALABAAAQAAAAAAAAAMABAAAQABAAAAAAANABAAAQACAAAAAAAOABAAAQADAAAAAAAPABAAAQAEAAAAAAAGABAAAQAAAAAAAAAHABAAAQABAAAAAAAIABAAAQACAAAAAAAJABAAAQADAAAAAAAKABAAAQAEAAAAAAAGAA8AAQAAAAAAAAAGAA4AAQAAAAAAAAASABEAAQAAAAAAAAATABEAAQABAAAAAAAUABEAAQACAAAAAAAVABEAAQADAAAAAAANABEAAQAAAAAAAAAOABEAAQABAAAAAAAPABEAAQACAAAAAAAQABEAAQADAAAAAAARABEAAQAEAAAAAAAIABEAAQABAAAAAAAJABEAAQACAAAAAAAKABEAAQADAAAAAAALABEAAQAEAAAAAAAMABEAAQAEAAAAAAADABEAAQAAAAAAAAAEABEAAQABAAAAAAAFABEAAQACAAAAAAAGABEAAQADAAAAAAAHABEAAQAAAAAAAAAHABIAAQAEAAAAAAAIABIAAQABAAAAAAAJABIAAQACAAAAAAAKABIAAQADAAAAAAALABIAAQAEAAAAAAAMABIAAQAAAAAAAAANABIAAQABAAAAAAAOABIAAQACAAAAAAAPABIAAQADAAAAAAAQABIAAQAEAAAAAAARABIAAQAAAAAAAAAbABIAAQAAAAAAAAAcABIAAQAAAAAAAAAdABIAAQABAAAAAAAeABIAAQACAAAAAAAfABIAAQADAAAAAAAfABAAAQADAAAAAAAfAA8AAQADAAAAAAAfAA4AAQADAAAAAAAfAA0AAQADAAAAAAAfAAwAAQADAAAAAAAgAAwAAQAEAAAAAAAgAA0AAQAEAAAAAAAgAA4AAQAEAAAAAAAgAA8AAQAEAAAAAAAgABAAAQAEAAAAAAAgABEAAQAEAAAAAAAgABIAAQAEAAAAAAAcABMAAQACAAAAAAAdABMAAQADAAAAAAAeABMAAQAEAAAAAAAfABMAAQADAAAAAAAgABMAAQAEAAAAAAAhAAsAAQACAAAAAAAiAAsAAQADAAAAAAAjAAsAAQAEAAAAAAAhAAoAAQAAAAMAAAAiAAoAAQABAAMAAAAjAAoAAQACAAMAAAAfAAkAAQACAAMAAAAgAAkAAQABAAAAAAAhAAkAAQAAAAIAAAAiAAkAAQABAAIAAAAjAAkAAQACAAIAAAAeAAkAAQABAAMAAAAOAAgAAQADAAAAAAAPAAgAAQAEAAAAAAAQAAgAAQAEAAEAAAAJAAgAAQAAAAAAAAAKAAgAAQABAAAAAAALAAgAAQAAAAAAAAAMAAgAAQABAAAAAAANAAgAAQACAAAAAAAJAAcAAQAAAAAAAAAKAAcAAQABAAAAAAALAAcAAQAAAAAAAAAMAAcAAQABAAAAAAANAAcAAQACAAAAAAAEAAcAAQAAAAAAAAAFAAcAAQABAAAAAAAGAAcAAQACAAAAAAAHAAcAAQADAAAAAAAIAAcAAQAEAAAAAAAEAAgAAQAAAAAAAAAFAAgAAQABAAAAAAAGAAgAAQACAAAAAAAHAAgAAQADAAAAAAAIAAgAAQAEAAAAAAAOAAcAAQADAAAAAAAPAAcAAQAEAAAAAAAQAAcAAQAEAAAAAAARAAcAAQADAAAAAAASAAcAAQAEAAAAAAATAAcAAQADAAAAAAAUAAcAAQAEAAAAAAAVAAcAAQACAAAAAAAWAAcAAQADAAAAAAAZAAcAAQABAAAAAAAaAAcAAQACAAAAAAAbAAcAAQADAAAAAAAcAAcAAQAEAAAAAAATAAgAAQACAAEAAAAUAAgAAQAEAAAAAAAVAAgAAQACAAAAAAAWAAgAAQADAAAAAAAZAAgAAQACAAEAAAAaAAgAAQACAAAAAAAbAAgAAQADAAAAAAAcAAgAAQAEAAAAAAAdAAgAAQAAAAEAAAAeAAgAAQABAAEAAAAfAAgAAQACAAEAAAAgAAgAAQADAAAAAAAhAAgAAQAAAAEAAAAbAAYAAQAAAAAAAAAcAAYAAQABAAAAAAAOAAYAAQAAAAAAAAAPAAYAAQABAAAAAAAQAAYAAQACAAAAAAARAAYAAQADAAAAAAAJAAYAAQACAAMAAAAKAAYAAQABAAAAAAALAAYAAQACAAAAAAAMAAYAAQADAAAAAAANAAYAAQAEAAAAAAAEAAYAAQAAAAAAAAAFAAYAAQABAAAAAAAGAAYAAQACAAAAAAAHAAYAAQADAAAAAAAIAAYAAQAAAAMAAAAGAAUAAQACAAAAAAAHAAUAAQADAAAAAAAIAAUAAQAAAAEAAAAJAAUAAQACAAEAAAAKAAUAAQAEAAAAAAALAAUAAQAAAAAAAAAMAAUAAQABAAAAAAANAAUAAQACAAAAAAAOAAUAAQADAAAAAAAPAAUAAQAEAAAAAAAQAAUAAQAAAAAAAAARAAUAAQABAAAAAAAbAAUAAQAAAAAAAAAcAAUAAQABAAAAAAAdAAUAAQACAAAAAAAeAAUAAQADAAAAAAAdAAYAAQACAAAAAAAeAAYAAQADAAAAAAAfAAYAAQAEAAAAAAAgAAYAAQADAAAAAAAhAAYAAQAEAAAAAAAdAAcAAQAEAAIAAAAeAAcAAQABAAAAAAAfAAcAAQACAAAAAAAgAAcAAQACAAAAAAAhAAcAAQADAAAAAAAiAAcAAQACAAAAAAAjAAcAAQADAAAAAAAkAAcAAQAEAAAAAAAlAAcAAQACAAAAAAAmAAcAAQADAAAAAAAfAAUAAQAEAAAAAAAgAAUAAQABAAAAAAAhAAUAAQACAAAAAAAiAAUAAQADAAAAAAAjAAUAAQAAAAAAAAAiAAYAAQAAAAAAAAAjAAYAAQABAAAAAAAkAAYAAQAAAAAAAAAlAAYAAQABAAAAAAAmAAYAAQACAAAAAAAiAAgAAQABAAEAAAAjAAgAAQACAAEAAAAkAAgAAQABAAAAAAAlAAgAAQACAAAAAAAmAAgAAQADAAAAAAAkAAkAAQAAAAAAAAAlAAkAAQABAAAAAAAmAAkAAQACAAAAAAAnAAkAAQADAAAAAAAoAAkAAQAAAAAAAAAkAAoAAQAAAAAAAAAlAAoAAQABAAAAAAAmAAoAAQACAAAAAAAnAAoAAQADAAAAAAAoAAoAAQAAAAAAAAAkAAsAAQAAAAAAAAAlAAsAAQABAAAAAAAmAAsAAQACAAAAAAAnAAsAAQADAAAAAAAoAAsAAQAAAAAAAAAkAAwAAQADAAAAAAAlAAwAAQAEAAAAAAAmAAwAAQACAAAAAAAnAAwAAQADAAAAAAAoAAwAAQAAAAAAAAAkAA0AAQADAAAAAAAlAA0AAQAEAAAAAAAmAA0AAQAAAAAAAAAnAA0AAQABAAAAAAAoAA0AAQAAAAAAAAAkAA4AAQADAAAAAAAlAA4AAQAEAAAAAAAmAA4AAQACAAAAAAAnAA4AAQADAAAAAAAoAA4AAQAAAAAAAAAhAAwAAQAAAAAAAAAiAAwAAQABAAAAAAAjAAwAAQACAAAAAAAhAA0AAQAAAAAAAAAiAA0AAQABAAAAAAAjAA0AAQACAAAAAAApAA0AAQABAAAAAAAqAA0AAQACAAAAAAAhAA4AAQAAAAAAAAAiAA4AAQABAAAAAAAjAA4AAQACAAAAAAAhAA8AAQAAAAAAAAAiAA8AAQABAAAAAAAjAA8AAQACAAAAAAAkAA8AAQADAAAAAAAlAA8AAQAEAAAAAAAhABAAAQAAAAAAAAAiABAAAQABAAAAAAAjABAAAQACAAAAAAAkABAAAQADAAAAAAAlABAAAQAEAAAAAAAhABEAAQAAAAAAAAAiABEAAQABAAAAAAAjABEAAQACAAAAAAAkABEAAQADAAAAAAAlABEAAQAEAAAAAAAhABIAAQAAAAAAAAAiABIAAQABAAAAAAAjABIAAQACAAAAAAAkABIAAQADAAAAAAAlABIAAQAEAAAAAAAhABMAAQAAAAAAAAAiABMAAQABAAAAAAAjABMAAQACAAAAAAAkABMAAQADAAAAAAAlABMAAQAEAAAAAAAmAA8AAQAAAAAAAAAnAA8AAQABAAAAAAAoAA8AAQAAAAAAAAApAA8AAQABAAAAAAAqAA8AAQACAAAAAAAmABAAAQAAAAAAAAAnABAAAQABAAAAAAAoABAAAQAAAAAAAAApABAAAQABAAAAAAAqABAAAQACAAAAAAAmABEAAQAAAAAAAAAnABEAAQABAAAAAAAoABEAAQAAAAAAAAApABEAAQABAAAAAAAqABEAAQACAAAAAAAmABIAAQAAAAAAAAAnABIAAQABAAAAAAAoABIAAQAAAAAAAAApABIAAQABAAAAAAAqABIAAQACAAAAAAAmABMAAQAAAAAAAAAnABMAAQABAAAAAAAoABMAAQAAAAAAAAApABMAAQABAAAAAAAqABMAAQACAAAAAAApAA4AAQABAAAAAAAqAA4AAQACAAAAAAArAA4AAQADAAAAAAAsAA4AAQAEAAAAAAAtAA4AAQAEAAAAAAArAA8AAQADAAAAAAAsAA8AAQAEAAAAAAAtAA8AAQAEAAAAAAArABAAAQADAAAAAAAsABAAAQAEAAAAAAAtABAAAQAEAAAAAAArABEAAQADAAAAAAAsABEAAQAEAAAAAAAtABEAAQAEAAAAAAArABIAAQADAAAAAAAsABIAAQAEAAAAAAAtABIAAQAEAAAAAAArABMAAQADAAAAAAAsABMAAQAEAAAAAAAtABMAAQAEAAAAAAArAA0AAQADAAAAAAAsAA0AAQAEAAAAAAApAAwAAQABAAAAAAAqAAwAAQACAAAAAAArAAwAAQADAAAAAAAsAAwAAQAEAAAAAAApAAsAAQABAAAAAAAqAAsAAQACAAAAAAArAAsAAQADAAAAAAAsAAsAAQAEAAAAAAApAAoAAQABAAAAAAAqAAoAAQACAAAAAAArAAoAAQADAAAAAAAsAAoAAQAEAAAAAAApAAkAAQABAAAAAAAqAAkAAQACAAAAAAArAAkAAQADAAAAAAAsAAkAAQAEAAAAAAAoAAgAAQAEAAAAAAApAAgAAQACAAAAAAAqAAgAAQADAAAAAAArAAgAAQAEAAAAAAAsAAgAAQAEAAAAAAAnAAgAAQAEAAAAAAAnAAcAAQAEAAAAAAAoAAcAAQAEAAAAAAApAAcAAQACAAAAAAAqAAcAAQADAAAAAAArAAcAAQAEAAAAAAAnAAYAAQADAAAAAAAoAAYAAQAEAAAAAAApAAYAAQACAAAAAAAqAAYAAQADAAAAAAArAAYAAQAEAAAAAAAnAAUAAQAEAAAAAAAoAAUAAQABAAAAAAApAAUAAQACAAAAAAAqAAUAAQADAAAAAAArAAUAAQAEAAAAAAAnAAQAAQAEAAAAAAAoAAQAAQABAAAAAAApAAQAAQACAAAAAAAqAAQAAQADAAAAAAArAAQAAQAEAAAAAAAkAAUAAQABAAAAAAAlAAUAAQACAAAAAAAmAAUAAQADAAAAAAAjAAQAAQAAAAAAAAAkAAQAAQABAAAAAAAlAAQAAQACAAAAAAAmAAQAAQADAAAAAAAjAAMAAQAAAAAAAAAkAAMAAQABAAAAAAAlAAMAAQACAAAAAAAmAAMAAQADAAAAAAAnAAMAAQAEAAAAAAAeAAMAAQAAAAAAAAAfAAMAAQABAAAAAAAgAAMAAQACAAAAAAAhAAMAAQADAAAAAAAiAAMAAQAEAAAAAAAeAAQAAQAAAAAAAAAfAAQAAQABAAAAAAAgAAQAAQACAAAAAAAhAAQAAQADAAAAAAAiAAQAAQAEAAAAAAAoAAMAAQAAAAAAAAApAAMAAQABAAAAAAAqAAMAAQACAAAAAAArAAMAAQADAAAAAAAsAAMAAQAEAAAAAAAZAAQAAQAAAAAAAAAaAAQAAQABAAAAAAAbAAQAAQACAAAAAAAcAAQAAQADAAAAAAAdAAQAAQAEAAAAAAAUAAQAAQAAAAAAAAAVAAQAAQABAAAAAAAWAAQAAQACAAAAAAAXAAQAAQADAAAAAAAYAAQAAQAEAAAAAAAPAAQAAQAAAAAAAAAQAAQAAQABAAAAAAARAAQAAQACAAAAAAASAAQAAQADAAAAAAATAAQAAQAEAAAAAAAKAAQAAQADAAAAAAALAAQAAQAEAAAAAAAMAAQAAQACAAAAAAANAAQAAQADAAAAAAAOAAQAAQAEAAAAAAAZAAMAAQAAAAAAAAAaAAMAAQABAAAAAAAbAAMAAQACAAAAAAAcAAMAAQADAAAAAAAdAAMAAQAEAAAAAAAUAAMAAQAAAAAAAAAVAAMAAQABAAAAAAAWAAMAAQACAAAAAAAXAAMAAQADAAAAAAAYAAMAAQAEAAAAAAAPAAMAAQAAAAAAAAAQAAMAAQABAAAAAAARAAMAAQACAAAAAAASAAMAAQADAAAAAAATAAMAAQAEAAAAAAAKAAMAAQADAAAAAAALAAMAAQAEAAAAAAAMAAMAAQACAAAAAAANAAMAAQADAAAAAAAOAAMAAQAEAAAAAAD//wgAAQAAAAAAAAAAAAgAAQABAAAAAAABAAgAAQACAAAAAAACAAgAAQADAAAAAAADAAgAAQAEAAAAAAD//wkAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQABAAAAAAACAAkAAQACAAAAAAADAAkAAQADAAAAAAD//woAAQAAAAAAAAAAAAoAAQAAAAAAAAABAAoAAQABAAAAAAACAAoAAQACAAAAAAADAAoAAQADAAAAAAD//wsAAQAAAAAAAAAAAAsAAQAAAAAAAAABAAsAAQABAAAAAAACAAsAAQACAAAAAAADAAsAAQADAAAAAAD//wwAAQAAAAAAAAAAAAwAAQAAAAAAAAABAAwAAQABAAAAAAACAAwAAQACAAAAAAADAAwAAQADAAAAAAD//w0AAQAAAAAAAAAAAA0AAQAAAAAAAAABAA0AAQAAAAAAAAACAA0AAQABAAAAAAADAA0AAQACAAAAAAAEAAkAAQAEAAAAAAAEAAoAAQAEAAAAAAAEAAsAAQAEAAAAAAAEAAwAAQAEAAAAAAAEAA0AAQADAAAAAAAAAA4AAQAAAAAAAAABAA4AAQAAAAAAAAACAA4AAQABAAAAAAADAA4AAQACAAAAAAAEAA4AAQADAAAAAAAFAA0AAQAEAAAAAAAFAA4AAQAEAAAAAAABAA8AAQADAAAAAAACAA8AAQAEAAAAAAADAA8AAQACAAAAAAAEAA8AAQADAAAAAAAFAA8AAQAEAAAAAAABABAAAQADAAAAAAACABAAAQAEAAAAAAADABAAAQACAAAAAAAEABAAAQADAAAAAAAFABAAAQAEAAAAAAD//wcAAQAAAAAAAAAAAAcAAQABAAAAAAABAAcAAQACAAAAAAACAAcAAQADAAAAAAADAAcAAQAEAAAAAAD//wYAAQAAAAAAAAAAAAYAAQABAAAAAAABAAYAAQACAAAAAAACAAYAAQADAAAAAAADAAYAAQAEAAAAAAAEAAUAAQAAAAAAAAAFAAUAAQABAAAAAAD//wUAAQAAAAAAAAAAAAUAAQABAAAAAAABAAUAAQACAAAAAAACAAUAAQADAAAAAAADAAUAAQAEAAAAAAD+/wQAAQAAAAAAAAD//wQAAQABAAAAAAAAAAQAAQACAAAAAAABAAQAAQADAAAAAAACAAQAAQAEAAAAAAADAAQAAQAAAAAAAAAEAAQAAQABAAAAAAAFAAQAAQACAAAAAAAGAAQAAQADAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQABAAAAAAAJAAQAAQACAAAAAAAHAAMAAQAAAAAAAAAIAAMAAQABAAAAAAAJAAMAAQACAAAAAAACAAMAAQADAAAAAAADAAMAAQAEAAAAAAAEAAMAAQACAAAAAAAFAAMAAQADAAAAAAAGAAMAAQAEAAAAAAD//wMAAQAAAAAAAAAAAAMAAQABAAAAAAABAAMAAQACAAAAAAD+/w8AAQAAAAAAAAD//w8AAQABAAAAAAAAAA8AAQACAAAAAAD+/xAAAQAAAAAAAAD//xAAAQABAAAAAAAAABAAAQACAAAAAAD+/xEAAQAAAAAAAAD//xEAAQABAAAAAAAAABEAAQACAAAAAAABABEAAQADAAAAAAACABEAAQAEAAAAAAD+/xIAAQAAAAAAAAD//xIAAQABAAAAAAAAABIAAQACAAAAAAABABIAAQADAAAAAAACABIAAQAEAAAAAAADABIAAQAAAAAAAAAEABIAAQABAAAAAAAFABIAAQACAAAAAAAGABIAAQADAAAAAAADABMAAQAAAAAAAAAEABMAAQABAAAAAAAFABMAAQACAAAAAAAGABMAAQADAAAAAAAHABMAAQAEAAAAAAADABQAAQAAAAAAAAAEABQAAQABAAAAAAAFABQAAQACAAAAAAAGABQAAQADAAAAAAAHABQAAQAEAAAAAAAIABQAAQAAAAAAAAAJABQAAQABAAAAAAAKABQAAQACAAAAAAALABQAAQADAAAAAAAMABQAAQAEAAAAAAANABQAAQAAAAAAAAAOABQAAQABAAAAAAAPABQAAQACAAAAAAAQABQAAQAAAAAAAAARABQAAQABAAAAAAANABMAAQAAAAAAAAAOABMAAQABAAAAAAAPABMAAQACAAAAAAAQABMAAQAAAAAAAAARABMAAQABAAAAAAAIABMAAQAAAAAAAAAJABMAAQABAAAAAAAKABMAAQACAAAAAAALABMAAQADAAAAAAAMABMAAQAEAAAAAAAYABQAAQADAAAAAAAZABQAAQAEAAAAAAAYABMAAQADAAAAAAAZABMAAQAEAAAAAAAaABMAAQAAAAAAAAAbABMAAQABAAAAAAAaABQAAQAAAAAAAAAbABQAAQABAAAAAAAcABQAAQACAAAAAAAdABQAAQAAAAAAAAAeABQAAQABAAAAAAAfABQAAQACAAAAAAAgABQAAQADAAAAAAAhABQAAQAEAAAAAAAiABQAAQAAAAAAAAAjABQAAQABAAAAAAAkABQAAQACAAAAAAAlABQAAQAAAAAAAAAmABQAAQABAAAAAAAnABQAAQACAAAAAAAoABQAAQADAAAAAAApABQAAQAEAAAAAAARAAsAAQACAAAAAAARAAgAAQAAAAEAAAARAAkAAQAAAAIAAAARAAoAAQAAAAMAAAASAAgAAQABAAEAAAASAAkAAQABAAIAAAASAAoAAQABAAMAAAAQAAoAAQABAAAAAAAMAAwAAQABAAAAAAA=")

[node name="Items" parent="Tilemaps" instance=ExtResource("4_g0m1e")]
tile_map_data = PackedByteArray("AAAPAA4AAQAAAAAAAAARAA4AAgAAAAAAAAAOAA4AAgABAAAAAAAUAA4AAQABAAAAAAA=")

[node name="Bricks" parent="Tilemaps" instance=ExtResource("4_mfvs1")]
tile_map_data = PackedByteArray("AAAaAAYAAAALAAMAAAAaAAUAAAALAAAAAAAZAAYAAAAJAAMAAAAZAAUAAAAKAAAAAAAYAAYAAAAGAAIAAAAYAAUAAAAKAAAAAAAXAAYAAAAFAAIAAAAXAAUAAAAKAAAAAAAWAAYAAAAJAAMAAAAWAAUAAAAKAAAAAAAVAAYAAAAJAAMAAAAVAAUAAAAKAAAAAAAUAAYAAAAJAAMAAAAUAAUAAAAKAAAAAAATAAYAAAAJAAMAAAATAAUAAAAKAAAAAAASAAYAAAAIAAMAAAASAAUAAAAIAAAAAAAYAAgAAAALAAMAAAAYAAcAAAALAAIAAAAXAAgAAAAIAAMAAAAXAAcAAAAIAAEAAAAbAAEAAAALAAAAAAAaAAEAAAAKAAAAAAAZAAEAAAAKAAAAAAAYAAEAAAAKAAAAAAAXAAEAAAAKAAAAAAAWAAEAAAAIAAAAAAAbAAIAAAALAAMAAAAaAAIAAAAJAAMAAAAZAAIAAAAJAAMAAAAYAAIAAAAJAAMAAAAXAAIAAAAJAAMAAAAWAAIAAAAIAAMAAAAeAAIAAAADAAMAAAAdAAIAAAABAAMAAAAlAAIAAAAHAAIAAAAlAAEAAAALAAAAAAAkAAIAAAAJAAMAAAAkAAEAAAAKAAAAAAAjAAIAAAAJAAMAAAAjAAEAAAAKAAAAAAAiAAIAAAAJAAMAAAAiAAEAAAAKAAAAAAAhAAIAAAAJAAMAAAAhAAEAAAAKAAAAAAAgAAIAAAAIAAMAAAAgAAEAAAAIAAAAAAAgAAsAAAALAAIAAAAgAAoAAAALAAAAAAAfAAsAAAAFAAIAAAAfAAoAAAAKAAAAAAAeAAsAAAAJAAMAAAAeAAoAAAAKAAAAAAAdAAsAAAAJAAMAAAAdAAoAAAAKAAAAAAAcAAsAAAAJAAMAAAAcAAoAAAAKAAAAAAAbAAsAAAAJAAMAAAAbAAoAAAAKAAAAAAAaAAsAAAAIAAMAAAAaAAoAAAAIAAAAAAASAA8AAAALAAMAAAASAA4AAAALAAIAAAASAA0AAAALAAAAAAARAA8AAAAJAAMAAAARAA4AAAAJAAIAAAARAA0AAAAKAAAAAAAQAA8AAAAJAAMAAAAQAA4AAAAJAAIAAAAQAA0AAAAKAAAAAAAPAA8AAAAJAAMAAAAPAA4AAAAJAAIAAAAPAA0AAAAKAAAAAAAOAA8AAAAJAAMAAAAOAA4AAAAJAAIAAAAOAA0AAAAKAAAAAAANAA8AAAAJAAMAAAANAA4AAAAJAAIAAAANAA0AAAAKAAAAAAAMAA8AAAAJAAMAAAAMAA4AAAAJAAIAAAAMAA0AAAAKAAAAAAALAA8AAAAJAAMAAAALAA4AAAAJAAIAAAALAA0AAAAKAAAAAAAKAA8AAAAJAAMAAAAKAA4AAAAJAAIAAAAKAA0AAAAGAAEAAAAJAA8AAAAJAAMAAAAJAA4AAAAJAAIAAAAJAA0AAAAJAAIAAAAIAA8AAAAJAAMAAAAIAA4AAAAJAAIAAAAIAA0AAAAJAAIAAAAHAA8AAAAIAAMAAAAHAA4AAAAIAAEAAAAHAA0AAAAIAAEAAAAKAAwAAAALAAIAAAAKAAsAAAALAAIAAAAKAAoAAAALAAIAAAAKAAkAAAAGAAAAAAAJAAwAAAAJAAIAAAAJAAsAAAAJAAIAAAAJAAoAAAAJAAIAAAAJAAkAAAAKAAAAAAAIAAwAAAAJAAIAAAAIAAsAAAAJAAIAAAAIAAoAAAAJAAIAAAAIAAkAAAAGAAEAAAAHAAwAAAAIAAEAAAAHAAsAAAAIAAEAAAAHAAoAAAAIAAEAAAAHAAkAAAAIAAEAAAALAAkAAAADAAMAAAASAAsAAAADAAMAAAARAAsAAAACAAMAAAAQAAsAAAACAAMAAAAPAAsAAAACAAMAAAAOAAsAAAABAAMAAAAOAAkAAAADAAMAAAANAAkAAAABAAMAAAAYAA0AAAALAAIAAAAYAAwAAAALAAAAAAAXAA0AAAAJAAIAAAAXAAwAAAAKAAAAAAAWAA0AAAAFAAIAAAAWAAwAAAAKAAAAAAAVAA0AAAAJAAMAAAAVAAwAAAAKAAAAAAAUAA0AAAAIAAMAAAAUAAwAAAAIAAAAAAAYABIAAAAJAAMAAAAYABEAAAAGAAEAAAAYABAAAAALAAIAAAAYAA8AAAALAAIAAAAYAA4AAAALAAIAAAAXABIAAAAGAAIAAAAXABEAAAAJAAIAAAAXABAAAAAJAAIAAAAXAA8AAAAJAAIAAAAXAA4AAAAJAAIAAAAWABIAAAAFAAEAAAAWABEAAAAIAAEAAAAWABAAAAAIAAEAAAAWAA8AAAAIAAEAAAAWAA4AAAAIAAEAAAAXABQAAAALAAMAAAAXABMAAAALAAIAAAAWABQAAAAJAAMAAAAWABMAAAAJAAIAAAAVABQAAAAJAAMAAAAVABMAAAAJAAIAAAAVABIAAAAKAAAAAAAUABQAAAAJAAMAAAAUABMAAAAJAAIAAAAUABIAAAAKAAAAAAATABQAAAAJAAMAAAATABMAAAAJAAIAAAATABIAAAAKAAAAAAASABQAAAAIAAMAAAASABMAAAAIAAEAAAASABIAAAAIAAAAAAAfABEAAAADAAMAAAAeABEAAAACAAMAAAAdABEAAAACAAMAAAAcABEAAAACAAMAAAAbABEAAAACAAMAAAAaABEAAAAGAAAAAAAZABEAAAAKAAAAAAAaABIAAAALAAMAAAAZABIAAAAJAAMAAAAFAAwAAAALAAMAAAAFAAsAAAALAAIAAAAFAAoAAAALAAAAAAAEAAwAAAAGAAIAAAAEAAsAAAAJAAIAAAAEAAoAAAAKAAAAAAADAAwAAAAJAAIAAAADAAsAAAAJAAIAAAADAAoAAAAKAAAAAAACAAwAAAAJAAIAAAACAAsAAAAJAAIAAAACAAoAAAAKAAAAAAABAAwAAAAJAAIAAAABAAsAAAAJAAIAAAABAAoAAAAGAAEAAAAEAAgAAAALAAMAAAAEAAcAAAALAAAAAAADAAgAAAAJAAMAAAADAAcAAAAKAAAAAAACAAgAAAAJAAMAAAACAAcAAAAKAAAAAAAIAAgAAAALAAAAAAAHAAgAAAAFAAAAAAAGAAgAAAABAAMAAAABAAcAAAAKAAAAAAAAAAcAAAAGAAEAAAD//wcAAAAIAAEAAAAAAAYAAAALAAIAAAAAAAUAAAALAAAAAAD//wYAAAAIAAEAAAD//wUAAAAIAAAAAAAEABAAAAAGAAEAAAAEAA8AAAALAAIAAAAEAA4AAAALAAIAAAAEAA0AAAALAAIAAAADAA8AAAAJAAIAAAADAA4AAAAJAAIAAAADAA0AAAAJAAIAAAACAA8AAAAJAAIAAAACAA4AAAAJAAIAAAACAA0AAAAJAAIAAAAJABEAAAADAAMAAAAIABEAAAACAAMAAAAHABEAAAACAAMAAAAGABEAAAACAAMAAAAFABEAAAAGAAMAAAAEABEAAAAGAAIAAAAFABAAAAALAAAAAAAoAA4AAAALAAMAAAAoAA0AAAALAAIAAAAoAAwAAAALAAAAAAAnAA4AAAAJAAMAAAAnAA0AAAAJAAIAAAAnAAwAAAAGAAEAAAAmAA4AAAAGAAIAAAAmAA0AAAAJAAIAAAAmAAwAAAAJAAIAAAAlAA4AAAAFAAIAAAAlAA0AAAAJAAIAAAAlAAwAAAAFAAEAAAAkAA4AAAAJAAMAAAAkAA0AAAAJAAIAAAAkAAwAAAAKAAAAAAAjAA4AAAAJAAMAAAAjAA0AAAAJAAIAAAAjAAwAAAAKAAAAAAAiAA4AAAAJAAMAAAAiAA0AAAAJAAIAAAAiAAwAAAAKAAAAAAAhAA4AAAAJAAMAAAAhAA0AAAAJAAIAAAAhAAwAAAAKAAAAAAAgAA4AAAAJAAMAAAAgAA0AAAAJAAIAAAAgAAwAAAAGAAEAAAAfAA4AAAAFAAMAAAAfAA0AAAAIAAEAAAAfAAwAAAAIAAEAAAAmABIAAAALAAIAAAAmABEAAAALAAEAAAAmABAAAAALAAIAAAAmAA8AAAALAAIAAAAlABIAAAAIAAIAAAAlABEAAAAIAAEAAAAlABAAAAAIAAEAAAAlAA8AAAAIAAEAAAAqABEAAAADAAMAAAApABEAAAACAAMAAAAoABEAAAACAAMAAAAnABEAAAACAAMAAAAeAA4AAAABAAMAAAAmABUAAAALAAMAAAAmABQAAAALAAIAAAAmABMAAAALAAIAAAAlABUAAAAJAAMAAAAlABQAAAAFAAEAAAAlABMAAAAIAAEAAAAkABUAAAAJAAMAAAAjABUAAAAJAAMAAAAiABUAAAAJAAMAAAAhABUAAAAJAAMAAAAgABUAAAAJAAMAAAAfABUAAAAJAAMAAAAeABUAAAAJAAMAAAAdABUAAAAJAAMAAAAcABUAAAAIAAMAAAAkABQAAAAKAAAAAAAjABQAAAAKAAAAAAAiABQAAAAKAAAAAAAhABQAAAAKAAAAAAAgABQAAAAKAAAAAAAfABQAAAAKAAAAAAAeABQAAAAKAAAAAAAdABQAAAAKAAAAAAAcABQAAAAIAAAAAAAkABIAAAABAAMAAAAvABMAAAADAAMAAAAuABMAAAACAAMAAAAtABMAAAACAAMAAAAsABMAAAACAAMAAAArABMAAAACAAMAAAAqABMAAAABAAMAAAANABMAAAAKAAAAAAAMABMAAAAKAAAAAAALABMAAAAKAAAAAAAKABMAAAAKAAAAAAAJABMAAAAKAAAAAAAIABMAAAAKAAAAAAAOABQAAAALAAIAAAANABQAAAAJAAIAAAAMABQAAAAJAAIAAAALABQAAAAJAAIAAAAKABQAAAAJAAIAAAAPAAcAAAALAAMAAAAPAAYAAAALAAAAAAAOAAYAAAAIAAAAAAAOAAcAAAAIAAMAAAAMAAUAAAADAAMAAAALAAUAAAACAAMAAAAKAAUAAAABAAMAAAANAAIAAAALAAAAAAAMAAIAAAAGAAEAAAALAAIAAAAJAAIAAAAKAAIAAAAJAAIAAAAJAAIAAAAJAAIAAAAIAAIAAAAJAAIAAAAHAAIAAAAFAAEAAAAGAAIAAAAKAAAAAAAFAAIAAAAGAAEAAAAMAAEAAAALAAIAAAAMAAAAAAAGAAAAAAALAAEAAAAJAAIAAAALAAAAAAAKAAAAAAAKAAEAAAAJAAIAAAAKAAAAAAAKAAAAAAAJAAEAAAAJAAIAAAAJAAAAAAAKAAAAAAAIAAEAAAAJAAIAAAAIAAAAAAAKAAAAAAAHAAEAAAAIAAEAAAAHAAAAAAAKAAIAAAAEAAQAAAALAAMAAAAEAAMAAAAGAAIAAAADAAQAAAAJAAMAAAADAAMAAAAJAAIAAAACAAQAAAAIAAMAAAACAAMAAAAIAAEAAAAFAAEAAAALAAIAAAAEAAIAAAAJAAIAAAAEAAEAAAAJAAIAAAADAAIAAAAJAAIAAAADAAEAAAAJAAIAAAACAAIAAAAIAAEAAAACAAEAAAAIAAEAAAAHAAMAAAAJAAMAAAAGAAMAAAAJAAMAAAAFAAMAAAAJAAMAAAAPAAMAAAADAAMAAAAOAAMAAAACAAMAAAANAAMAAAAGAAMAAAAMAAMAAAAJAAMAAAALAAMAAAAJAAMAAAAKAAMAAAAJAAMAAAAJAAMAAAAJAAMAAAAIAAMAAAAJAAMAAAASAAEAAAAAAAIAAAASAAAAAAAAAAAAAAAQAAEAAAAAAAMAAAAOAAAAAAADAAMAAAANAAAAAAACAAMAAAAHAP//AAALAAAAAAAGAAAAAAAJAAMAAAAGAP//AAAKAAAAAAAFAAAAAAAGAAIAAAAFAP//AAAKAAAAAAAEAAAAAAAJAAIAAAAEAP//AAAKAAAAAAADAAAAAAAJAAIAAAADAP//AAAKAAAAAAACAAAAAAAIAAEAAAACAP//AAAIAAAAAAAnAAsAAAALAAIAAAAnAAoAAAALAAIAAAAnAAkAAAALAAIAAAAnAAgAAAALAAIAAAAnAAcAAAALAAIAAAAnAAYAAAALAAIAAAAnAAUAAAALAAIAAAAnAAQAAAALAAIAAAAnAAMAAAALAAAAAAAmAAsAAAAJAAIAAAAmAAoAAAAJAAIAAAAmAAkAAAAJAAIAAAAmAAgAAAAJAAIAAAAmAAcAAAAJAAIAAAAmAAYAAAAJAAIAAAAmAAUAAAAJAAIAAAAmAAQAAAAJAAIAAAAmAAMAAAAKAAAAAAAlAAsAAAAIAAEAAAAlAAoAAAAIAAEAAAAlAAkAAAAIAAEAAAAlAAgAAAAIAAEAAAAlAAcAAAAIAAEAAAAlAAYAAAAIAAEAAAAlAAUAAAAIAAEAAAAlAAQAAAAIAAEAAAAlAAMAAAAEAAEAAAABABMAAAAJAAIAAAABABIAAAAJAAIAAAABABEAAAAJAAIAAAABABAAAAAJAAIAAAABAA8AAAAJAAIAAAABAA4AAAAJAAIAAAABAA0AAAAJAAIAAAABAAkAAAALAAIAAAABAAgAAAAGAAIAAAAAABMAAAAJAAIAAAAAABIAAAAJAAIAAAAAABEAAAAJAAIAAAAAABAAAAAJAAIAAAAAAA8AAAAJAAIAAAAAAA4AAAAJAAIAAAAAAA0AAAAJAAIAAAAAAAwAAAAJAAIAAAAAAAsAAAAJAAIAAAAAAAoAAAAJAAIAAAAAAAkAAAAJAAIAAAAAAAgAAAAJAAIAAAD//xMAAAAIAAEAAAD//xIAAAAIAAEAAAD//xEAAAAIAAEAAAD//xAAAAAIAAEAAAD//w8AAAAIAAEAAAD//w4AAAAIAAEAAAD//w0AAAAIAAEAAAD//wwAAAAIAAEAAAD//wsAAAAIAAEAAAD//woAAAAIAAEAAAD//wkAAAAIAAEAAAD//wgAAAAIAAEAAAAEABMAAAAGAAEAAAAEABIAAAALAAIAAAADABMAAAAJAAIAAAADABIAAAAJAAIAAAADABEAAAAJAAIAAAADABAAAAAJAAIAAAACABMAAAAJAAIAAAACABIAAAAJAAIAAAACABEAAAAJAAIAAAACABAAAAAJAAIAAAAOABYAAAALAAMAAAAOABUAAAALAAIAAAAOABMAAAALAAAAAAANABYAAAAJAAMAAAANABUAAAAJAAIAAAAMABYAAAAJAAMAAAAMABUAAAAJAAIAAAALABYAAAAJAAMAAAALABUAAAAJAAIAAAAJABQAAAAFAAIAAAAIABQAAAAJAAMAAAAHABQAAAAJAAMAAAAHABMAAAAKAAAAAAAGABQAAAAJAAMAAAAGABMAAAAKAAAAAAAFABQAAAAJAAMAAAAFABMAAAAKAAAAAAAEABQAAAAJAAMAAAADABQAAAAJAAMAAAACABQAAAAJAAMAAAABABQAAAAJAAMAAAAAABQAAAAJAAMAAAD//xQAAAAIAAMAAAAJABUAAAAIAAEAAAAJABYAAAAIAAMAAAAKABUAAAAJAAIAAAAKABYAAAAJAAMAAAA=")

[node name="Dirt" parent="Tilemaps" instance=ExtResource("4_3yd84")]

[node name="Player" parent="." instance=ExtResource("3_q5qvi")]
position = Vector2(284, 148)

[node name="Enemies" type="Node2D" parent="."]

[node name="Slime" parent="Enemies" instance=ExtResource("8_by2qa")]
position = Vector2(535, 188)

[node name="bat" parent="Enemies" instance=ExtResource("9_s0t6t")]
position = Vector2(453, 135)

[node name="Traps" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Spikes" parent="Traps" instance=ExtResource("5_g0m1e")]
position = Vector2(365, 190)

[node name="Spikes2" parent="Traps" instance=ExtResource("5_g0m1e")]
position = Vector2(240, 174)

[node name="Spikes3" parent="Traps" instance=ExtResource("5_g0m1e")]
position = Vector2(319, 78)

[node name="AnimatedSpike" parent="Traps" instance=ExtResource("8_hq8bp")]
position = Vector2(174, 142)

[node name="CameraLimits" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="TopLeft" type="Marker2D" parent="CameraLimits"]
position = Vector2(0, -1)
metadata/_edit_lock_ = true

[node name="BottomRight" type="Marker2D" parent="CameraLimits"]
position = Vector2(639, 334)
metadata/_edit_lock_ = true

[node name="KillZone" parent="." instance=ExtResource("10_sdhud")]
position = Vector2(-35, 375)
metadata/_edit_lock_ = true
